# MusicBoxd

./: CNAME  index.html  login.html  master.html  pyproject.toml  receta.html  registration.html  songs.html
css/: index.css  login.css  songs.css
js/: songs.js
kirclub/: manage.py
kirclub/club/: api.py  models.py  urls.py  views.py
kirclub/club/migrations/: 0001_initial.py
kirclub/kirclub/: asgi.py  settings.py  urls.py  wsgi.py
kirclub/staticfiles/: main.css  vinyl.css
kirclub/templates/: index.html  master.html  receta.html
kirclub/templates/registration/: login.html
kirclub/users/: urls.py  views.py
styles/: index.css  login.css  receta.css
